--- a/index.html
+++ b/index.html
@@ -4,9 +4,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mew</title>
+    <link rel="stylesheet" href="estilos/estilos.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Slackey&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <p>perro</p>
+    <section>
+        <header class="cabecera">
+            <div class="logo">
+                <h1>Mew</h1>
+            </div>
+            <div class="menu">
+                <a href="">Home</a>
+                <a href="">About</a>
+                <a href="">Services</a>
+                <a href="">Facilities</a>
+            </div>
+            <div class="sign-up">
+                <button>sign up</button>
+            </div>
+        </header>
+        <section class="contenedor1">
+            <div class="contimg">
+                <div class="imagenes">
+                    <div class="imagen1">
+                        <img src="imagenes/imagen1.png" alt="">
+                    </div>
+                    <div class="imagen2">
+                        <img src="imagenes/imagen2.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="titulo"></div>
+            <div class="barra"></div>
+        </section>
+    </section>
 </body>
 </html>
