--- a/index.html
+++ b/index.html
@@ -31,17 +31,22 @@
         </header>
         <section class="contenedor1">
             <div class="contimg">
-                <div class="imagenes">
                     <div class="imagen1">
                         <img src="imagenes/imagen1.png" alt="">
                     </div>
                     <div class="imagen2">
                         <img src="imagenes/imagen2.png" alt="">
                     </div>
+                    <img class="star" src="imagenes/Star 1.svg" alt="">
+                    <div class="titulo">
+                        <h1>We take care of <br> your pet and help <br> them to grow</h1>
+                        <p>Best pets are waiting for adoption. Find out the the perfect <br> one you will like it. It’s our promise.</p>
+                    </div>
+                    <div class="barra"></div>
+                    <div class="aviso"></div>
                 </div>
-            </div>
-            <div class="titulo"></div>
-            <div class="barra"></div>
+            
+            
         </section>
     </section>
 </body>
