creando branch teo

--- a/index.html
+++ b/index.html
@@ -42,8 +42,32 @@
                         <h1>We take care of <br> your pet and help <br> them to grow</h1>
                         <p>Best pets are waiting for adoption. Find out the the perfect <br> one you will like it. It’s our promise.</p>
                     </div>
-                    <div class="barra"></div>
-                    <div class="aviso"></div>
+                    <div class="boton">
+                        <button #contact_us>Contact us</button>
+                        <div class="usuarios">
+                            <img id="img1"  src="imagenes/Ellipse 59.svg" alt="elipse 59">
+                            <img id="img2"  src="imagenes/Ellipse 60.svg" alt="elipse 60">
+                            <img id="img3"  src="imagenes/Ellipse 61.svg" alt="elipse 61">
+                            <img id="img4"  src="imagenes/Ellipse 62.svg" alt="elipse 62">
+                            <div class="elipseFinal">
+                                <img id="img5"  src="imagenes/Ellipse 63.svg" alt="elipse 63">
+                                <img id="img6"  src="imagenes/Ellipse 64.svg" alt="elipse 64">
+                                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><p id="mas7">+7</p></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="inofi-elip">
+                        <img id="elip19" src="imagenes/Ellipse 19.svg" alt="elipse 19">
+                        <img id="elip19-1" src="imagenes/Ellipse 19.svg" alt="elipse 19-1">
+                        <img id="elip19-2" src="imagenes/Ellipse 19.svg" alt="elipse 19-2">
+                    </div>
+                    <div class="aviso">
+                        <div class="titulo-2">    
+                            <img src="imagenes/Union.svg" alt="Union">
+                            <h1>How to take care</h1>
+                        </div>
+                        <p>perfect one you will like it. it's our promise</p>
+                    </div>
                 </div>
             
             
