--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     </div>
                     <img class="star" src="imagenes/Star 1.svg" alt="">
                     <div class="titulo">
-                        <h1>We take care of <br> your pet and help <br> them to grow</h1>
+                        <h1>We take care of <br> your pet and help <br> them to grow 😍</h1>
                         <p>Best pets are waiting for adoption. Find out the the perfect <br> one you will like it. It’s our promise.</p>
                     </div>
                     <div class="boton">
@@ -68,6 +68,7 @@
                         </div>
                         <p>perfect one you will like it. it's our promise</p>
                     </div>
+                    <img id="huella" src="imagenes/Union.svg" alt="Union">
                 </div>
             
             
